packages/build/tests/error/monitor/fixtures/cancel_build/plugin.js
module.exports = {
  onInit({
    utils: {
      build: { cancelBuild },
    },
  }) {
    cancelBuild('test')
  },
}
